Pixel classifier pane refactoring